<resources>
    <string name="app_name">ProjetoLPIV</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="item_name">Items Name</string>
    <string name="type_item">Type of Item</string>
    <string name="Description_item">Description of Item</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_initial">Map</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="button_save">Save</string>
    <string name="ticket_subject">Subject of Ticket</string>
    <string name="ticket_Description">Description of Ticket</string>
    <string name="error_ocurred">An error as Ocurred</string>
</resources>
